2007-04-06 Michael Weber <michaelw+slime@foldr.org>

	* slime.el (slime-call-defun): insert the closing parenthesis for
	the form.
	
2007-04-06  Marco Baringer  <mb@bese.it>

	* swank-openmcl.lisp (package swank-mop): Added
	slot-makunbound-using-class.

2007-03-29  Nikodemus Siivola <nikodemus@random-state.net>

	* swank-sbcl.lisp (swank-compile-string): save the original
	directory into the source plist as :emacs-directory.
	(make-definition-source-location): use the :emacs-directory from
	the source plist and guess-readtable-for-filename to determine the
	correct readtable for string-compiled definitions.

2007-03-29  Nikodemus Siivola <nikodemus@random-state.net>

	* swank.lisp (*macroexpand-printer-bindings*): add *print-lines*
	to defaults (NIL).
	(find-definitions-for-emacs): use unless instead of cond.

2007-03-25  Douglas Crosher <dcrosher@common-lisp.net>

	* slime.el (with-selected-window): define for compatibility with
	Emacs 21.

2007-03-24  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank.lisp (menu-choices-for-presentation): Offer a
	"disassemble" menu item for functions.

2007-03-24  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-read-port-and-connect): Fix race condition:
	retry one more time if the port file is empty. Pop up the debugger
	on other errors.
	(slime-attempt-connection): Moved to toplevel.
	(slime-timer-call): New. Used by slime-attempt-connection.
	(slime-cancel-connect-retry-timer): New.
	(slime-abort-connection): Use it.
	(slime-repl-insert-prompt): Use insert-before-markers. This fixes
	some redisplay problems, but I don't know why.  Also: remove the
	timer for async output.
	(slime-repl-move-output-mark-before-prompt): Removed.
	(slime-repl-save-merged-history): Use with-temp-message.
	(slime-goto-location-buffer): Support Zip files.
	(sldb-quit): Don't print "Evaluation aborted".

2007-03-22  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>
